--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server  --https --cert /home/mayke/example.com+5.pem --key /home/mayke/example.com+5-key.pem --host 0.0.0.0 --open --config webpack.dev.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --mode production --config  webpack.prod.js",
     "analyse": "node webpack.analyse.js"
   },
@@ -15,11 +15,13 @@
     "@material-ui/styles": "^4.9.10",
     "axios": "^0.19.2",
     "bowser": "^2.9.0",
+    "date-fns": "^2.16.1",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
     "react-autosuggest": "^9.4.3",
     "react-dom": "16.13.1",
     "react-ga": "^2.7.0",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "^5.1.2",
     "react-router-ga": "^1.2.3",
     "typeface-roboto": "^0.0.75"
